# aye-mcp

./: .gitignore  package.json  pnpm-lock.yaml  vite.config.js
docs/: mcp-config.md
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  mcp.rs
src-tauri/src/llm/: error.rs  mod.rs  models.rs  utils.rs
src/lib/: config.ts  constants.ts  index.ts  stronghold.ts  utils.ts
src/lib/components/attchments/: attachment-list.svelte  attachment-preview.svelte
src/lib/components/chat/: chat-container.svelte  chat-message-list.svelte  chat-message.svelte  markdown-renderer.svelte  thinking-block.svelte  tool-call-list.svelte
src/lib/components/input/: message-input.svelte  provider-selector.svelte  tool-selector.svelte
src/lib/components/llm/: provider-add-dialog.svelte  provider-card.svelte  provider-icon.svelte  provider-manager.svelte
src/lib/components/mcp/: mcp-status-alert.svelte
src/lib/components/settings/: mcp-settings.svelte
src/lib/db/: chat_message.ts  chat_thread.ts  db.ts
src/lib/llm/: keystore.ts
src/lib/mcp/: config-manager.ts  mcp-manager.ts  server-id.ts  startup-manager.ts
src/lib/stores/: app-prefs.svelte.ts  chat-input.svelte.ts  index.ts  mcp-tool.svelte.ts  message-thread.svelte.ts  provider-manager.svelte.ts
src/lib/tools/: compat.ts  defs.ts  exec-mgr.ts  impl.ts
src/lib/types/: func.ts  index.ts  mcp-config.ts  mcp.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/providers/: +page.svelte
src/routes/settings/: +page.svelte
(+13 files in other folders)
